--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>C. Catur Septian</title>
+    <title>Catur Septian</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" />
     <!-- Bootstrap -->
@@ -132,7 +132,7 @@
                 <div class="flex-center position-ref full-height">
                     <div class="content">
                         <div class="title m-b-md animated tada infinite">
-                            C. Catur Septian
+                            Catur Septian
                         </div>
 
                         <div class="links">
