--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="flex-center position-ref full-height">
                     <div class="content">
                         <div class="title m-b-md animated tada infinite">
-                            Catur Septian
+                            Tian
                         </div>
 
                         <div class="links">
