--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Catur Septian</title>
+    <title>Tian</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" />
     <!-- Bootstrap -->
